@@ -7,7 +7,7 @@ import java.util.stream.Collectors;
 public class FilterNegativeNumbers {
     public static void main(String[] args) {
         List<Integer> numbers = Arrays.asList(1, -4, 3, 6, -6, 10, 0);
-        List<Integer> positive = numbers.stream().filter(num -> num > 0).collect(Collectors.toList());
+        List<Integer> positive = numbers.stream().filter(num -> num > 0).toList();
         positive.forEach(System.out::println);
     }
 }
